trunk/Archive2/76/b02e61050721ce/output
main.cpp: In function 'int main()':
main.cpp:16:10: error: 'fun' has not been declared
     auto fun::std async(GetUrl,"MMMMMMMM");
          ^
main.cpp:16:19: error: qualified-id in declaration before 'async'
     auto fun::std async(GetUrl,"MMMMMMMM");
                   ^
main.cpp:17:26: error: missing template arguments before '.' token
     string example=future.get();
                          ^
